traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:5: error: Unmatched closing brace '}' ignored here
  }
  ^TraversalByColumn:10: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByColumn:13: error: expected start of definition
	override def forward()  {
                 ^TraversalByColumn:16: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByColumn:19: error: expected start of definition
	override def backward() {
                 ^TraversalByColumn:22: error: Unmatched closing brace '}' ignored here
}
^