traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  val largeur : Int = getMondeLargeur()
  val hauteur : Int = getMondeHauteur()
  var cpt : Int = 0 
  ecritMessage(cpt); cpt=cpt+1; setPos(getX(),getY()+1)
  }
  }
}